kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: processx-service
  labels:
    app: processx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: processx
    tier: frontend
