kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: processx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "processx.com"
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /company
        pathType: Prefix
        backend:
          service:
            name: company-service
            port:
              number: 80
      - path: /settings
        pathType: Prefix
        backend:
          service:
            name: settings-service
            port:
              number: 80
      - path: /design
        pathType: Prefix
        backend:
          service:
            name: design-service
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: dashboard-service
            port:
              number: 80
      - path: /publish
        pathType: Prefix
        backend:
          service:
            name: publish-service
            port:
              number: 80
      - path: /reports
        pathType: Prefix
        backend:
          service:
            name: reports-service
            port:
              number: 80
  tls:
  - hosts:
    - "processx.com"
    secretName: processx-tls
